--- a/index.html
+++ b/index.html
@@ -529,7 +529,7 @@
 	</div>
 	<!--   === Footer Contents Ends ===   -->
 	<div class="copy-rights">
-		<p>Created By <b>Five Star Tutorials</b> All Rights Reserved</p>
+		<p>Created By <b>Vaibhav Bora</b> All Rights Reserved</p>
 	</div>
 
 </section>
